--- a/main.html
+++ b/main.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 
 <html>
+	
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Git</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<p>My intro to git and colab.</p>
 
 </body>
 
